--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 mod_id=omnipotent
 mod_name=Omnipotent
 mod_group=com.omnipotent
-mod_version=alpha 7.0.4
-mod_author=["Principal gamerYToffi, contribuidores mkll, bielgomes"]
+mod_version=alpha 7.0.5
+#mod_author=//["Principal gamerYToffi", "contribuidores mkll", "bielgomes"]
 mod_description=O poder supremo, quer sugerir alguma mudança ou encontrou algum bug? me envie uma mensagem @GANGS#0891.
 minecraft_version=1.12.2
 forge_version=14.23.5.2860
