--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,11 @@ dependencies {
     compileOnly files('libs/LoliPickaxe-1.2.16f_V3_traducao_versao_santificada_brasileira_que_nao_veio_da-deepweb_chinesa.jar')
     implementation files('libs/RedstoneFlux-1.12-2.1.1.1-universal.jar')
     compileOnly files('libs/Botania+r1.10-364.4.jar')
-    compileOnly files('libs/Draconic-Evolution-1.12.2-2.3.28.354-universal.jar')
-    compileOnly files('libs/BrandonsCore-1.12.2-2.4.19.214-universal.jar')
-    compileOnly files('libs/!mixinbooter-8.6.jar')
+    compileOnly files('libs/Draconic-Evolution-1.12.2-2.3.28.193-deobf.jar')
+    compileOnly files('libs/BrandonsCore-1.12.2-2.4.20.22-deobf.jar')
+    implementation files('libs/!mixinbooter-8.6.jar')
+    implementation files('libs/AbyssalCraft-1.12.2-1.10.4.jar')
+    compileOnly files('libs/iceandfire-1.9.1-1.12.2.jar')
     embed('org.spongepowered:mixin:0.8.3-SNAPSHOT') {
         exclude module: 'guava'
         exclude module: 'commons-io'
