--- a/build.gradle
+++ b/build.gradle
@@ -72,8 +72,8 @@ dependencies {
     implementation files('libs/AbyssalCraft-1.12.2-1.10.4.jar')
     compileOnly files('libs/iceandfire-1.9.1-1.12.2.jar')
     implementation files('libs/FantasticLib-1.12.2.047d.jar')
-//    implementation files('libs/crazymonsters-1.12.2-1.0.jar')
-//    implementation files('libs/ChaosWither0.6.6.2.jar')
+    compileOnly files('libs/crazymonsters-1.12.2-1.0.jar')
+    compileOnly files('libs/ChaosWither0.6.6.2.jar')
     embed('org.spongepowered:mixin:0.8.3-SNAPSHOT') {
         exclude module: 'guava'
         exclude module: 'commons-io'
