--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
+            jvmArg '-Dmixin.hotSwap=true'
+            jvmArg '-Dmixin.checks.interfaces=true'
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             property 'forge.logging.console.level', 'debug'
             arg '-torg.spongepowered.asm.launch.MixinTweaker'
@@ -36,11 +38,15 @@ minecraft {
             arg '-torg.spongepowered.asm.launch.MixinTweaker'
         }
     }
+//    accessTransformer = file('libs/MAC_API-2.7.jar')
 }
 
 repositories {
     maven { url = 'https://repo.spongepowered.org/maven' }
     maven { url 'https://maven.cleanroommc.com' }
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 configurations {
@@ -49,37 +55,45 @@ configurations {
 }
 
 dependencies {
-    annotationProcessor 'org.ow2.asm:asm-debug-all:5.2'
-    annotationProcessor 'com.google.guava:guava:32.1.2-jre'
-    annotationProcessor 'com.google.code.gson:gson:2.8.9'
+//    annotationProcessor 'org.ow2.asm:asm-debug-all:5.2'
+//    annotationProcessor 'com.google.guava:guava:32.1.2-jre'
+//    annotationProcessor 'com.google.code.gson:gson:2.8.9'
 
     // ForgeGradle:
 
-    def s = 'zone.rong:mixinbooter:8.8'
-    implementation(s) {
-        transitive = false
-    }
-    annotationProcessor(s) {
-        transitive = false
-    }
+//    def s = 'zone.rong:mixinbooter:8.8'
+//    implementation(s) {
+//        transitive = false
+//    }
+//    annotationProcessor(s) {
+//        transitive = false
+//    }
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     compileOnly files('libs/LoliPickaxe-1.2.16f_V3_traducao_versao_santificada_brasileira_que_nao_veio_da-deepweb_chinesa.jar')
     compileOnly files('libs/RedstoneFlux-1.12-2.1.1.1-universal.jar')
     compileOnly files('libs/Botania+r1.10-364.4.jar')
     compileOnly files('libs/Draconic-Evolution-1.12.2-2.3.28.193-deobf.jar')
     compileOnly files('libs/BrandonsCore-1.12.2-2.4.20.22-deobf.jar')
-    implementation files('libs/!mixinbooter-8.6.jar')
+//    implementation files('libs/!mixinbooter-8.6.jar')
+//    implementation 'zone.rong:mixinbooter:8.6'
+    compileOnly 'zone.rong:mixinbooter:8.6'
+    runtimeOnly 'zone.rong:mixinbooter:8.6'
+
     compileOnly files('libs/AbyssalCraft-1.12.2-1.10.4.jar')
     compileOnly files('libs/iceandfire-1.9.1-1.12.2.jar')
     implementation files('libs/FantasticLib-1.12.2.047d.jar')
     compileOnly files('libs/crazymonsters-1.12.2-1.0.jar')
     compileOnly files('libs/ChaosWither0.6.6.2.jar')
     compileOnly files('libs/Players Ultimate Weapon 1.12.2 - 1.0.1..jar')
-    embed('org.spongepowered:mixin:0.8.3-SNAPSHOT') {
-        exclude module: 'guava'
-        exclude module: 'commons-io'
-        exclude module: 'gson'
-    }
+//    implementation files('libs/MAC_API-2.7.jar')
+//    implementation fg.deobf('th:MAC_API-2.7:2.7')
+    compileOnly fg.deobf('th:MAC_API-2.7:2.7')
+    implementation fg.deobf('th:The_Titans_Mod-0.6.1-indev:0.6.1-indev')
+//    embed('org.spongepowered:mixin:0.8.3-SNAPSHOT') {
+//        exclude module: 'guava'
+//        exclude module: 'commons-io'
+//        exclude module: 'gson'
+//    }
 }
 sourceSets { main { output.resourcesDir = output.classesDir } }
 processResources {
@@ -114,6 +128,8 @@ jar {
         attributes "ForceLoadAsMod": "true"
         attributes "TweakClass": "org.spongepowered.asm.launch.MixinTweaker"
         attributes "TweakOrder": "0"
+//        manifest.attributes('FMLAT': 'mod_at.cfg')
+        attributes "FMLCorePluginContainsFMLMod": "true"
     }
 }
 
