fixed bugs and new translation and use java 16 syntax

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.java.installations.auto-download=false
 
 
 # Source Options
-use_modern_java_syntax = false
+use_modern_java_syntax = true
 
 # Compilation Options
 generate_sources_jar = true
