--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -27,6 +27,19 @@ repositories {
 }
 
 dependencies {
+    compileOnly(rfg.deobf(project.files("libs/RedstoneFlux-1.12-2.1.1.1-universal.jar")))
+    compileOnly(rfg.deobf(project.files("libs/Botania+r1.10-364.4.jar")))
+    compileOnly(rfg.deobf(project.files("libs/Draconic-Evolution-1.12.2-2.3.28.193-deobf.jar")))
+    compileOnly(rfg.deobf(project.files("libs/BrandonsCore-1.12.2-2.4.20.22-deobf.jar")))
+    compileOnly(rfg.deobf(project.files("libs/AbyssalCraft-1.12.2-1.10.4.jar")))
+    compileOnly(rfg.deobf(project.files("libs/iceandfire-1.9.1-1.12.2.jar")))
+    implementation files('libs/FantasticLib-1.12.2.047d.jar')
+    compileOnly(rfg.deobf(project.files("libs/crazymonsters-1.12.2-1.0.jar")))
+    compileOnly(rfg.deobf(project.files("libs/ChaosWither0.6.6.2.jar")))
+    compileOnly(rfg.deobf(project.files("libs/Players Ultimate Weapon 1.12.2 - 1.0.1..jar")))
+    api(rfg.deobf(project.files("libs/LoliPickaxe-1.2.16f_V3_traducao_versao_santificada_brasileira_que_nao_veio_da-deepweb_chinesa.jar")))
+    api(rfg.deobf(project.files("libs/MAC_API-2.7.jar")))
+    api(rfg.deobf(project.files("libs/The_Titans_Mod-0.6.1-indev.jar")))
     // Example - Dependency descriptor:
     // 'com.google.code.gson:gson:2.8.6' << group: com.google.code.gson, name:gson, version:2.8.6
     // 'group:name:version:classifier' where classifier is optional
@@ -35,7 +48,7 @@ dependencies {
     // rfg.deobf('curse.maven:had-enough-items-557549:4543375')
     // By wrapping a dependency descriptor in rfg.deobf() method call, the dependency is queued for deobfuscation
     // When deobfuscating, RFG respects the mapping_channel + mapping_version stated in gradle.properties
-
+    //    compileOnly files('libs/LoliPickaxe-1.2.16f_V3_traducao_versao_santificada_brasileira_que_nao_veio_da-deepweb_chinesa.jar')
     // Example - CurseMaven dependencies:
     // 'curse.maven:had-enough-items-557549:4543375' << had-enough-items = project slug, 557549 = project id, 4543375 = file id
     // Full documentation: https://cursemaven.com/
