--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -34,12 +34,14 @@ dependencies {
     compileOnly(rfg.deobf(project.files("libs/AbyssalCraft-1.12.2-1.10.4.jar")))
     compileOnly(rfg.deobf(project.files("libs/iceandfire-1.9.1-1.12.2.jar")))
     implementation files('libs/FantasticLib-1.12.2.047d.jar')
+    implementation files('libs/HammerLib-1.12.2-12.2.56-deobf.jar')
     compileOnly(rfg.deobf(project.files("libs/crazymonsters-1.12.2-1.0.jar")))
     compileOnly(rfg.deobf(project.files("libs/ChaosWither0.6.6.2.jar")))
     compileOnly(rfg.deobf(project.files("libs/Players Ultimate Weapon 1.12.2 - 1.0.1..jar")))
-    api(rfg.deobf(project.files("libs/LoliPickaxe-1.2.16f_V3_traducao_versao_santificada_brasileira_que_nao_veio_da-deepweb_chinesa.jar")))
-    api(rfg.deobf(project.files("libs/MAC_API-2.7.jar")))
-    api(rfg.deobf(project.files("libs/The_Titans_Mod-0.6.1-indev.jar")))
+    compileOnly(rfg.deobf(project.files("libs/LoliPickaxe-1.2.16f_V3_traducao_versao_santificada_brasileira_que_nao_veio_da-deepweb_chinesa.jar")))
+    compileOnly(rfg.deobf(project.files("libs/MAC_API-2.7.jar")))
+    compileOnly(rfg.deobf(project.files("libs/The_Titans_Mod-0.6.1-indev.jar")))
+    // Example - Dependency descriptor:
     // Example - Dependency descriptor:
     // 'com.google.code.gson:gson:2.8.6' << group: com.google.code.gson, name:gson, version:2.8.6
     // 'group:name:version:classifier' where classifier is optional
