--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ show_testing_output = false
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version=1.0.2-beta.1
+mod_version=1.0.3-beta.1
 root_package = com.omnipotent
 mod_id=omnipotent
 mod_name=Omnipotent
@@ -37,10 +37,9 @@ mod_credits =
 mod_logo_path =
 
 # Mapping Properties
-mapping_channel = snapshot
-#stable
-mapping_version = 20171003
-  #39
+mapping_channel = stable
+mapping_version = 39
+#snapshot 20171003
 use_dependency_at_files = true
 
 # Run Configurations
