--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ tasks.decompressDecompiledSources.enabled !propertyBool('change_minecraft_source
 java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(propertyBool('use_modern_java_syntax') ? 16 : 8))
-        vendor.set(JvmVendorSpec.ADOPTOPENJDK)
+        vendor.set(JvmVendorSpec.AMAZON)
     }
     if (propertyBool('generate_sources_jar')) {
         withSourcesJar()
@@ -105,6 +105,14 @@ repositories {
     maven {
         name 'CleanroomMC Maven'
         url 'https://maven.cleanroommc.com'
+    }
+    maven {
+        name = 'ChickenBones'
+        url = uri("https://maven.covers1624.net")
+    }
+    maven {
+        name = "Progwml6 maven"
+        url = "https://dvs1.progwml6.com/files/maven/"
     }
     flatDir {
         dirs 'libs'
