--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -27,10 +27,8 @@ repositories {
 }
 
 dependencies {
-    compileOnly(rfg.deobf(project.files("libs/RedstoneFlux-1.12-2.1.1.1-universal.jar")))
+    api(rfg.deobf(project.files("libs/RedstoneFlux-1.12-2.1.1.1-universal.jar")))
     compileOnly(rfg.deobf(project.files("libs/Botania+r1.10-364.4.jar")))
-    compileOnly(rfg.deobf(project.files("libs/Draconic-Evolution-1.12.2-2.3.28.193-deobf.jar")))
-    compileOnly(rfg.deobf(project.files("libs/BrandonsCore-1.12.2-2.4.20.22-deobf.jar")))
     compileOnly(rfg.deobf(project.files("libs/AbyssalCraft-1.12.2-1.10.4.jar")))
     compileOnly(rfg.deobf(project.files("libs/iceandfire-1.9.1-1.12.2.jar")))
     implementation files('libs/FantasticLib-1.12.2.047d.jar')
@@ -41,6 +39,18 @@ dependencies {
     compileOnly(rfg.deobf(project.files("libs/LoliPickaxe-1.2.16f_V3_traducao_versao_santificada_brasileira_que_nao_veio_da-deepweb_chinesa.jar")))
     compileOnly(rfg.deobf(project.files("libs/MAC_API-2.7.jar")))
     compileOnly(rfg.deobf(project.files("libs/The_Titans_Mod-0.6.1-indev.jar")))
+    implementation(rfg.deobf('codechicken:CodeChickenLib:1.12.2-3.2.3.358:universal'))
+    implementation(rfg.deobf('com.brandon3055.brandonscore:BrandonsCore:1.12.2-2.4.20.162:universal')) {
+        transitive = false
+    }
+    implementation(rfg.deobf(project.files('libs/Draconic-Evolution-1.12.2-2.3.28.354-universal.jar')))
+//    api(rfg.deobf(project.files("libs/Draconic-Evolution-1.12.2-2.3.28.354-universal.jar")))
+//    api(rfg.deobf('Draconic-Evolution-1.12.2-2.3.28.354-universal.jar'))
+//    api(rfg.deobf('com.brandon3055.draconicevolution:Draconic-Evolution:1.12.2-2.3.27.353'))
+//    implementation 'com.brandon3055.draconicevolution:Draconic-Evolution:1.12.2-2.3.24.349:universal'
+//    api(rfg.deobf('codechicken:CodeChickenLib:1.12.2-3.2.3.358:universal'))
+//    api(rfg.deobf('com.brandon3055.brandonscore:BrandonsCore:1.12-2.4.2.161:universal'))
+//    runtimeOnly(rfg.deobf("mezz.jei:jei_1.12.2:4.7.9.96"))
     // Example - Dependency descriptor:
     // Example - Dependency descriptor:
     // 'com.google.code.gson:gson:2.8.6' << group: com.google.code.gson, name:gson, version:2.8.6
