chore: add initial setup for crafting table integration in KaiaBackPack
- Added basic structure for crafting table functionality
- This is a preliminary test code and does not fully implement the crafting system yet

Note: The current code is experimental and serves as groundwork for further implementation.

--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ tasks.decompressDecompiledSources.enabled !propertyBool('change_minecraft_source
 java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(propertyBool('use_modern_java_syntax') ? 16 : 8))
-        vendor.set(JvmVendorSpec.AMAZON)
+        vendor.set(JvmVendorSpec.ADOPTOPENJDK)
     }
     if (propertyBool('generate_sources_jar')) {
         withSourcesJar()
