--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -50,7 +50,7 @@ dependencies {
 //    implementation 'com.brandon3055.draconicevolution:Draconic-Evolution:1.12.2-2.3.24.349:universal'
 //    api(rfg.deobf('codechicken:CodeChickenLib:1.12.2-3.2.3.358:universal'))
 //    api(rfg.deobf('com.brandon3055.brandonscore:BrandonsCore:1.12-2.4.2.161:universal'))
-//    runtimeOnly(rfg.deobf("mezz.jei:jei_1.12.2:4.7.9.96"))
+    implementation(rfg.deobf("mezz.jei:jei_1.12.2:4.7.9.96"))
     // Example - Dependency descriptor:
     // Example - Dependency descriptor:
     // 'com.google.code.gson:gson:2.8.6' << group: com.google.code.gson, name:gson, version:2.8.6
