now version 1.2.0-beta.1 improved code and bugs fixed

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ show_testing_output = false
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version=1.1.0-beta.1
+mod_version=1.2.0-beta.1
 root_package = com.omnipotent
 mod_id=omnipotent
 mod_name=Omnipotent
@@ -46,7 +46,7 @@ use_dependency_at_files = true
 # If multiple arguments/tweak classes are stated, use spaces as the delimiter
 minecraft_username = gamerYToffi
 #It doesn't work with paths containing accents and probably with spaces.
-extra_jvm_args = -javaagent:${projectDir}/agent/hotswap-agent.jar
+extra_jvm_args = -javaagent:${projectDir}/agent/hotswap-agent.jar -Dforge.logging.console.level=debug 
 extra_tweak_classes =
 
 
