--- a/gradle.properties
+++ b/gradle.properties
@@ -46,7 +46,7 @@ use_dependency_at_files = true
 # If multiple arguments/tweak classes are stated, use spaces as the delimiter
 minecraft_username = gamerYToffi
 #It doesn't work with paths containing accents and probably with spaces.
-extra_jvm_args = -javaagent:${projectDir}/agent/hotswap-agent.jar -Dforge.logging.console.level=debug 
+extra_jvm_args = -javaagent:${projectDir}/agent/hotswap-agent.jar -Dforge.logging.console.level=debug  -DomniDebug=true
 extra_tweak_classes =
 
 
